--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,103 @@
-# I removed all the requirement in 'try branch' and i commit it
+absl-py==2.1.0
+altair==5.5.0
+appdirs==1.4.4
+astunparse==1.6.3
+attrs==24.3.0
+beautifulsoup4==4.12.3
+blinker==1.9.0
+cachetools==5.5.1
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
+Cython==3.0.11
+flatbuffers==25.1.21
+fonttools==4.55.5
+frozendict==2.4.6
+gast==0.6.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.38.0
+google-auth-oauthlib==1.2.1
+google-pasta==0.2.0
+grpcio==1.70.0
+h5py==3.12.1
+html5lib==1.1
+idna==3.10
+importlib_metadata==7.2.1
+Jinja2==3.1.5
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+keras==2.15.0
+kiwisolver==1.4.8
+libclang==18.1.1
+lxml==5.3.0
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.8.2
+mdurl==0.1.2
+ml-dtypes==0.2.0
+multitasking==0.0.11
+namex==0.0.8
+narwhals==1.23.0
+numpy==1.26.3
+oauthlib==3.2.2
+opt_einsum==3.4.0
+optree==0.14.0
+packaging==23.2
+pandas==2.2.0
+patsy==1.0.1
+peewee==3.17.8
+pillow==10.4.0
+platformdirs==4.3.6
+plotly==5.18.0
+pmdarima==2.0.4
+protobuf==4.25.5
+pyarrow==19.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydeck==0.9.1
+Pygments==2.19.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+referencing==0.36.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.9.4
+rpds-py==0.22.3
+rsa==4.9
+scikit-learn==1.4.0
+scipy==1.15.1
+seaborn==0.13.2
+six==1.17.0
+smmap==5.0.2
+soupsieve==2.6
+statsmodels==0.14.1
+streamlit==1.31.1
+tenacity==8.5.0
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.5.0
+threadpoolctl==3.5.0
+toml==0.10.2
+tornado==6.4.2
+typing_extensions==4.12.2
+tzdata==2025.1
+tzlocal==5.2
+urllib3==2.3.0
+validators==0.34.0
+watchdog==6.0.0
+webencodings==0.5.1
+Werkzeug==3.1.3
+wrapt==1.14.1
+yfinance==0.2.36
+zipp==3.21.0
