dev1:stable version updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,7 @@ peewee==3.17.8
 pillow==10.4.0
 platformdirs==4.3.6
 plotly==5.18.0
-pmdarima==2.0.4
+pmdarima>=2.0.0
 protobuf==4.25.5
 pyarrow==19.0.0
 pyasn1==0.6.1
