--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,7 @@ peewee==3.17.8
 pillow==10.4.0
 platformdirs==4.3.6
 plotly==5.18.0
-pmdarima>=2.0.0
+pmdarima==2.0.4
 protobuf==4.25.5
 pyarrow==19.0.0
 pyasn1==0.6.1
@@ -99,5 +99,5 @@ watchdog==6.0.0
 webencodings==0.5.1
 Werkzeug==3.1.3
 wrapt==1.14.1
-yfinance==0.2.36
+yfinance==0.2.54
 zipp==3.21.0
